--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -1,31 +1,35 @@
 @font-face {
   font-family: 'Montserrat';
-  src: url('./fonts/Montserrat-Bold.woff') format('woff');
+  src: url('../misc/fonts/Montserrat-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('./fonts/Montserrat-Regular.woff') format('woff');
+  src: url('../misc/fonts/Montserrat-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Quicksand';
-  src: url('./fonts/Quicksand-Bold.woff') format('woff');
+  src: url('../misc/fonts/Quicksand-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Quicksand';
-  src: url('./fonts/Quicksand-Regular.woff');
+  src: url('../misc/fonts/Quicksand-Regular.woff');
   font-weight: 400;
   font-style: normal;
 }
 
 .hello {
   color: red;
+}
+
+body {
+  background-image: url(../misc/images/background.jpg);
 }
