--- a/src/index.pug
+++ b/src/index.pug
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")    
-    title Document
-  body
-    block main
+extends ./template/_template
+
+block main
+  h1 Pug - node template engine
+  #container.col
+    if youAreUsingPug
+      p You are amazing
+    else
+      p Get on it!
+      p.
+        Pug is a terse and simple templating language with a
+        strong focus on performance and powerful features.
