Added colors-blocks for ui-kit

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,12 +1,4 @@
-extends ./template/_template
+extends ./templates/_template
 
 block main
-  h1 Pug - node template engine
-  #container.col
-    if youAreUsingPug
-      p You are amazing
-    else
-      p Get on it!
-      p.
-        Pug is a terse and simple templating language with a
-        strong focus on performance and powerful features.
+  include ./pages/ui-kit/ui-kit
