grids on ui-kit page

--- a/src/app.scss
+++ b/src/app.scss
@@ -5,5 +5,5 @@
 }
 
 @import 'misc/fonts';
-@import 'templates/colors-blocks';
-@import 'pages/ui-kit/ui-kit';
+@import 'styles/colors';
+@import 'pages/ui-kit/ui-kit.scss';
