--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -1,12 +1,21 @@
+@import 'pages/ui-kit/colors-blocks.scss';
+@import 'pages/ui-kit/fonts-list.scss';
 .colors-and-type {
   margin: 150px 0 0 150px;
   display: grid;
-  grid-gap: 20px;
-  grid-template-columns: 400px auto;
-  grid-template-rows: 70px;
+  grid-template-columns: 300px 350px;
+  grid-gap: 100px;
 }
 
 .colors-list {
   display: grid;
   grid-gap: 20px;
+}
+
+.fonts-list {
+  display: flex;
+  flex-direction: column;
+  // display: grid;
+  // grid-template-rows: auto auto auto auto 100px 100px 100px;
+  // grid-gap: 20px;
 }
