--- a/src/pages/ui-kit/form-elements.scss
+++ b/src/pages/ui-kit/form-elements.scss
@@ -1,4 +1,5 @@
 @import '../../components/text-field/text-field.scss';
+@import '../../components/dropdown/dropdown.scss';
 .wrapper-1 {
   display: grid;
   grid-gap: 20px;
