Added object as an argument to dropdown mixin

--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,5 +1,14 @@
-mixin dropdown(title, name, choosetype, id, placeholder, style, hint)
- .dropdown  
-  label(class="textfield__label title-h3" for=id data-hint=hint)= title
-  input.dropdown__input(class=style type=choosetype placeholder=placeholder name=name id=id)
-  i.material-icons(dropdown__icon) expand_more
+//- mixin dropdown(title, name, choosetype, id, placeholder, style, hint)
+//-  .dropdown(class!=attributes.class)
+//-   label(class="textfield__label title-h3" for=id data-hint=hint)= title
+//-   input.dropdown__input(class=style type=choosetype placeholder=placeholder name=name id=id)
+//-   .dropdown__icon
+//-     i.material-icons(class="dropdown__icon--expand") expand_more
+
+mixin dropdown(object)
+ .dropdown(class!=attributes.class)
+  //- if object.link != null
+  label(class=object.labelClasses for=object.id data-hint=object.hint) #{object.title}
+  input.dropdown__input(class=object.inputClasses type=object.inputType placeholder=object.placeholder name=object.name id=object.id)
+  .dropdown__icon
+    i.material-icons(class="dropdown__icon--expand") expand_more
