--- a/src/components/text-field/text-field.scss
+++ b/src/components/text-field/text-field.scss
@@ -14,6 +14,7 @@
       right: 0;
       color: $darkshade-50;
     }
+    /**/
   }
   &__input {
     width: 100%;
@@ -30,5 +31,11 @@
       border-color: $darkshade-50;
       outline: none;
     }
+    &--dropdown {
+      padding-right: 44px;
+    }
+  }
+  &--date {
+    width: 150px;
   }
 }
