changes in input mixin (text fields and dropdowns)

--- a/src/app.scss
+++ b/src/app.scss
@@ -8,5 +8,6 @@ $material-icons-font-path: '~material-icons/iconfont/';
 @import 'styles/colors';
 @import 'misc/fonts';
 @import '~material-icons/iconfont/material-icons.scss';
+@import 'styles/columns';
 @import 'pages/ui-kit/ui-kit.scss';
 @import 'pages/ui-kit/form-elements.scss'
