--- a/src/components/input-field/input-field.scss
+++ b/src/components/input-field/input-field.scss
@@ -1,21 +1,5 @@
-.textfield {
-  width: 320px;
+.input-field {
   position: relative;
-  &__label {
-    display: block;
-    margin-bottom: 5px;
-    /*TODO: Удалить потом*/
-    &::after {
-      content: attr(data-hint);
-      text-transform: uppercase;
-      font-weight: normal;
-      position: absolute;
-      top: 0;
-      right: 0;
-      color: $darkshade-50;
-    }
-    /**/
-  }
   &__input {
     width: 100%;
     padding: 13px 15px;
