--- a/src/pages/ui-kit/form-elements.pug
+++ b/src/pages/ui-kit/form-elements.pug
@@ -1,81 +1,82 @@
+- var inputfield = "input-field";
+- var inputblock = "input-block"
+
 .wrapper-1
-  include ../../components/text-field/text-field.pug
-  //- +textfield(title, name, choosetype, id, placeholder, style, hint)
-  +textfield({title: "Text Field",
+  include ../../components/input-field/input-field.pug
+  +inputField({title: "Text Field",
+              type: "textfield",
               name: "default",
               id: "textfield-default",
               hint: "Default",
               inputType: "email",
               placeholder: "Email",
-              labelClasses: ["textfield__label", "title-h3"],
-              inputClasses: ""})
-  +textfield({title: "Text Field",
+              inputBlockClasses: ["col-xs"],
+              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
+              inputFieldClasses: [inputfield],
+              inputFieldInputClasses: [inputfield + "__input"]})
+  +inputField({title: "Text Field",
+              type: "textfield",
               name: "hover-focus",
               id: "textfield-hover-focus",
               hint: "hover / focus",
               inputType: "email",
               placeholder: "This is pretty awesome",
-              labelClasses: ["textfield__label", "title-h3"],
-              inputClasses: ""})
-  +textfield({title: "Masked Text Field",
+              inputBlockClasses: ["col-xs"],
+              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
+              inputFieldClasses: [inputfield],
+              inputFieldInputClasses: [inputfield + "__input"]})
+  +inputField({title: "Masked Text Field",
+              type: "textfield",
               name: "masked",
               id: "textfield-masked",
               hint: "Default",
               inputType: "email",
               placeholder: "ДД.ММ.ГГГГ",
-              labelClasses: ["textfield__label", "title-h3"],
-              inputClasses: ""})
-  +textfield({title: "Dropdown",
+              inputBlockClasses: ["col-xs"],
+              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
+              inputFieldClasses: [inputfield],
+              inputFieldInputClasses: [inputfield + "__input"]})
+  +inputField({title: "Dropdown",
+              type: "dropdown",
               name: "dropdown",
               id: "dropdown-default",
               hint: "Default",
-              type: "dropdown",
               inputType: "text",
               placeholder: "Сколько гостей",
-              labelClasses: ["textfield__label", "title-h3"],
-              inputClasses: "textfield__input--dropdown"})
-  +textfield({title: "Date Dropdown", 
+              inputBlockClasses: ["col-xs"],
+              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
+              inputFieldClasses: [inputfield],
+              inputFieldInputClasses: [inputfield + "__input"]})
+  +inputField({title: "Date Dropdown", 
+              type: "dropdown",
               name: "date-dropdown", 
               id: "date-dropdown", 
               hint: "",
-              type: "dropdown",
               inputType: "text",
               placeholder: "ДД.ММ.ГГГГ",
-              labelClasses: ["textfield__label", "title-h3"],
-              inputClasses: "textfield__input--dropdown"
-              })(class="textfield--date")
-  +textfield({title: "Filter Date Dropdown", 
+              inputBlockClasses: ["col-xs"],
+              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
+              inputFieldClasses: [inputfield + "--date"],
+              inputFieldInputClasses: [inputfield + "__input"]})
+  +inputField({title: "Filter Date Dropdown", 
+              type: "dropdown",
               name: "filter-date-dropdown", 
               id: "filter-date-dropdown", 
               hint: "",
-              type: "dropdown",
               inputType: "text", 
               placeholder: "19 авг - 23 авг", 
-              labelClasses: ["textfield__label", "title-h3"], 
-              inputClasses: "textfield__input--dropdown"})
-  //- include ../../components/dropdown/dropdown.pug
-  //- +dropdown({title: "Dropdown", 
-  //-           name: "dropdown", 
-  //-           id: "dropdown-default", 
-  //-           hint: "Default",
-  //-           inputType: "text", 
-  //-           placeholder: "Сколько гостей", 
-  //-           labelClasses: ["textfield__label", "title-h3"], 
-  //-           inputClasses: ""})
-  //- +dropdown({title: "Date Dropdown", 
-  //-           name: "date-dropdown", 
-  //-           id: "date-dropdown", 
-  //-           hint: "",            
-  //-           inputType: "text", 
-  //-           placeholder: "ДД.ММ.ГГГГ", 
-  //-           labelClasses: ["textfield__label", "title-h3"], 
-  //-           inputClasses: ""
-  //-           })(class="dropdown--date")
-  //- +dropdown({title: "Filter Date Dropdown", 
-  //-           name: "filter-date-dropdown", 
-  //-           id: "filter-date-dropdown", 
-  //-           hint: "",
-  //-           inputType: "text", 
-  //-           placeholder: "19 авг - 23 авг", 
-  //-           labelClasses: ["textfield__label", "title-h3"], 
-  //-           inputClasses: ""})
+              inputBlockClasses: ["col-xs"],
+              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
+              inputFieldClasses: [inputfield],
+              inputFieldInputClasses: [inputfield + "__input"]})
+  +inputField({title: "Subscription text field", 
+              type: "subscribe",
+              name: "filter-date-dropdown", 
+              id: "filter-date-dropdown", 
+              hint: "",
+              inputType: "text", 
+              placeholder: "Email", 
+              inputBlockClasses: ["col-xs"],
+              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
+              inputFieldClasses: [inputfield],
+              inputFieldInputClasses: [inputfield + "__input"]})
