--- a/src/pages/ui-kit/form-elements.scss
+++ b/src/pages/ui-kit/form-elements.scss
@@ -1,5 +1,7 @@
-@import '../../components/text-field/text-field.scss';
-@import '../../components/dropdown/dropdown.scss';
+@import '../../components/input-field/input-field.scss';
+@import '../../components/input-block/input-block.scss';
+@import '../../components/icons/icons.scss';
+@import '../../components/icons/__input.scss';
 .wrapper-1 {
   display: grid;
   grid-gap: 20px;
