--- a/src/pages/ui-kit/form-elements.pug
+++ b/src/pages/ui-kit/form-elements.pug
@@ -3,80 +3,90 @@
 
 .wrapper-1
   include ../../components/input-field/input-field.pug
-  +inputField({title: "Text Field",
-              type: "textfield",
-              name: "default",
-              id: "textfield-default",
-              hint: "Default",
-              inputType: "email",
-              placeholder: "Email",
-              inputBlockClasses: ["col-xs"],
-              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
-              inputFieldClasses: [],
-              inputFieldInputClasses: [inputfield + "__input"]})
-  +inputField({title: "Text Field",
-              type: "textfield",
-              name: "hover-focus",
-              id: "textfield-hover-focus",
-              hint: "hover / focus",
-              inputType: "email",
-              placeholder: "This is pretty awesome",
-              inputBlockClasses: ["col-xs"],
-              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
-              inputFieldClasses: [],
-              inputFieldInputClasses: [inputfield + "__input"]})
-  +inputField({title: "Masked Text Field",
-              type: "textfield",
-              name: "masked",
-              id: "textfield-masked",
-              hint: "Default",
-              inputType: "email",
-              placeholder: "ДД.ММ.ГГГГ",
-              inputBlockClasses: ["col-xs"],
-              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
-              inputFieldClasses: [],
-              inputFieldInputClasses: [inputfield + "__input"]})
-  +inputField({title: "Dropdown",
-              type: "dropdown",
-              name: "dropdown",
-              id: "dropdown-default",
-              hint: "Default",
-              inputType: "text",
-              placeholder: "Сколько гостей",
-              inputBlockClasses: ["col-xs"],
-              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
-              inputFieldClasses: [],
-              inputFieldInputClasses: [inputfield + "__input", inputfield + "__input--dropdown"]})
-  +inputField({title: "Date Dropdown", 
-              type: "dropdown",
-              name: "date-dropdown", 
-              id: "date-dropdown", 
-              hint: "",
-              inputType: "text",
-              placeholder: "ДД.ММ.ГГГГ",
-              inputBlockClasses: ["col-xs"],
-              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
-              inputFieldClasses: [inputfield + "--date"],
-              inputFieldInputClasses: [inputfield + "__input", inputfield + "__input--dropdown"]})
-  +inputField({title: "Filter Date Dropdown", 
-              type: "dropdown",
-              name: "filter-date-dropdown", 
-              id: "filter-date-dropdown", 
-              hint: "",
-              inputType: "text", 
-              placeholder: "19 авг - 23 авг", 
-              inputBlockClasses: ["col-xs"],
-              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
-              inputFieldClasses: [],
-              inputFieldInputClasses: [inputfield + "__input", inputfield + "__input--dropdown"]})
-  +inputField({title: "Subscription text field", 
-              type: "subscribe",
-              name: "filter-date-dropdown", 
-              id: "filter-date-dropdown", 
-              hint: "",
-              inputType: "text", 
-              placeholder: "Email", 
-              inputBlockClasses: ["col-xs"],
-              inputBlockLabelClasses: [inputblock + "__label", "title-h3"],
-              inputFieldClasses: [],
-              inputFieldInputClasses: [inputfield + "__input", inputfield + "__input--dropdown"]})
+  +input-field(
+        {title: "Text Field",
+        type: "textfield",
+        name: "default",
+        id: "textfield-default",
+        hint: "Default",
+        inputType: "email",
+        placeholder: "Email",
+        inputBlockClasses: ["col-xs"],
+        inputBlockLabelClasses: [inputblock + "__label"],
+        inputFieldClasses: [],
+        inputFieldInputClasses: [inputfield + "__input"]})
+  +input-field(
+        {title: "Text Field",
+        type: "textfield",
+        name: "hover-focus",
+        id: "textfield-hover-focus",
+        hint: "hover / focus",
+        inputType: "email",
+        placeholder: "This is pretty awesome",
+        inputBlockClasses: ["col-xs"],
+        inputBlockLabelClasses: [inputblock + "__label"],
+        inputFieldClasses: [],
+        inputFieldInputClasses: [inputfield + "__input"]})
+  +input-field(
+        {title: "Masked Text Field",
+        type: "textfield",
+        name: "masked",
+        id: "textfield-masked",
+        hint: "Default",
+        inputType: "email",
+        placeholder: "ДД.ММ.ГГГГ",
+        inputBlockClasses: ["col-xs"],
+        inputBlockLabelClasses: [inputblock + "__label"],
+        inputFieldClasses: [],
+        inputFieldInputClasses: [inputfield + "__input"]})
+  +input-field(
+        {title: "Dropdown",
+        type: "dropdown",
+        name: "dropdown",
+        id: "dropdown-default",
+        hint: "Default",
+        inputType: "text",
+        placeholder: "Сколько гостей",
+        inputBlockClasses: ["col-xs"],
+        inputBlockLabelClasses: [inputblock + "__label"],
+        inputFieldClasses: [],
+        inputFieldInputClasses: [inputfield + "__input", inputfield + "__input--dropdown"]},
+        {"Спальни": 0, "Кровати": 0, "Ванные комнаты": 0})
+  +input-field(
+        {title: "Date Dropdown", 
+        type: "dropdown",
+        name: "date-dropdown", 
+        id: "date-dropdown", 
+        hint: "",
+        inputType: "text",
+        placeholder: "ДД.ММ.ГГГГ",
+        inputBlockClasses: ["col-xs"],
+        inputBlockLabelClasses: [inputblock + "__label"],
+        inputFieldClasses: [inputfield + "--date"],
+        inputFieldInputClasses: [inputfield + "__input", inputfield + "__input--dropdown"]},
+        {})
+  +input-field(
+        {title: "Filter Date Dropdown", 
+        type: "dropdown",
+        name: "filter-date-dropdown", 
+        id: "filter-date-dropdown", 
+        hint: "",
+        inputType: "text", 
+        placeholder: "19 авг - 23 авг", 
+        inputBlockClasses: ["col-xs"],
+        inputBlockLabelClasses: [inputblock + "__label"],
+        inputFieldClasses: [],
+        inputFieldInputClasses: [inputfield + "__input", inputfield + "__input--dropdown"]},
+        {"Взрослые": 0, "Дети": 0, "Младенцы": 0})
+  +input-field(
+        {title: "Subscription text field", 
+        type: "subscribe",
+        name: "filter-date-dropdown", 
+        id: "filter-date-dropdown", 
+        hint: "",
+        inputType: "text", 
+        placeholder: "Email", 
+        inputBlockClasses: ["col-xs"],
+        inputBlockLabelClasses: [inputblock + "__label"],
+        inputFieldClasses: [],
+        inputFieldInputClasses: [inputfield + "__input", inputfield + "__input--dropdown"]})
