--- a/src/components/input-field/input-field.pug
+++ b/src/components/input-field/input-field.pug
@@ -1,19 +1,22 @@
 - var inputField = "input-field";
 - var inputBlock = "input-block";
 
-mixin inputField(opt)
+include ../icons/icons.pug
+include ../dropdown/dropdown.pug
+
+mixin input-field(opt, dropdownList)
  div(class= [inputBlock, opt.inputBlockClasses])
   //- If there has to be a label then call it by ˝title: ""˝
   if opt.title
     label(class=opt.inputBlockLabelClasses for=opt.id data-hint=opt.hint) #{opt.title}
   //- .inputfield(class!=attributes.class)
   div(class= [inputField, opt.inputFieldClasses])
-    input(class=opt.inputFieldInputClasses type=opt.inputType placeholder=opt.placeholder name=opt.name id=opt.id)
+    if opt.type=="textfield"
+      input(class=opt.inputFieldInputClasses type=opt.inputType placeholder=opt.placeholder name=opt.name id=opt.id)
     if opt.type=="dropdown"
-      .icons
-        .icons__input
-          i.material-icons.icons--dropdown expand_more
+      input(class=opt.inputFieldInputClasses type=opt.inputType placeholder=opt.placeholder name=opt.name id=opt.id data-toggle=opt.type)
+      +icon({type: "icons--dropdown", icon: "expand_more"})      
+      +dropdown(dropdownList)
     if opt.type=="subscribe"
-      .icons
-        .icons__input
-          i.material-icons.icons--arrow.icons--purple arrow_forward
+      input(class=opt.inputFieldInputClasses type=opt.inputType placeholder=opt.placeholder name=opt.name id=opt.id)
+      +icon({type: ["icons--arrow", "icons--purple"], icon: "arrow_forward"})
