--- a/src/components/icons/icons.pug
+++ b/src/components/icons/icons.pug
@@ -1,4 +1,5 @@
 mixin icon(opt)
   .icons
-    .icons__input
-      i(class= ["material-icons", opt.type]) #{opt.icon}
+    if opt.place == "input"
+      .icons__input
+        i(class= ["material-icons", opt.type]) #{opt.icon}
