--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -4,25 +4,50 @@ $radius: 4px;
   border-radius: 0 0 $radius $radius;
   margin: 0;
   margin-top: -1px;
-  padding: 13px 15px;
+  padding: 7px 7px 13px 15px;
+  background-color: $white;
+  // display: none;
+  // position: absolute;
+  // width: 100%;
+  // z-index: 10;
   &__item {
-    display: table;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     list-style: none;
-    // margin-top: 16px;
+    margin-top: 7px;
     &:first-child {
       margin-top: 0;
     }
   }
   &__title,
-  &__value {
+  &__value,
+  &__clear,
+  &__apply {
     @include title-h3;
-    display: table-cell;
-  }
-  &__title {
-    width: 60%;
   }
   &__value {
-    width: 10%;
+    display: flex;
+    justify-content: center;
+    width: 32px;
+  }
+  &__choose {
+    display: flex;
+    align-items: center;
+  }
+  &__clear,
+  &__apply {
+    outline: none;
+    border: 0;
+    padding: 0;
+    margin-top: 20px;
+    cursor: pointer;
+  }
+  &__clear {
+    color: $darkshade-50;
+  }
+  &__apply {
+    color: $purple;
   }
 }
