--- a/src/components/input-block/input-block.scss
+++ b/src/components/input-block/input-block.scss
@@ -1,18 +1,18 @@
 .input-block {
   &__label {
     position: relative;
-    display: block;
+    display: inline;
     margin-bottom: 5px;
     @include title-h3;
     /*TODO: Удалить потом*/
-    &::after {
-      content: attr(data-hint);
-      text-transform: uppercase;
-      font-weight: normal;
-      position: absolute;
-      top: 0;
-      right: 0;
-      color: $darkshade-50;
-    }
+    // &::after {
+    //   content: attr(data-hint);
+    //   text-transform: uppercase;
+    //   font-weight: normal;
+    //   position: absolute;
+    //   top: 0;
+    //   right: 0;
+    //   color: $darkshade-50;
+    // }
   }
 }
